[tool.poetry]
name = "bouncer"
version = "0.1.0"
description = ""
authors = ["mingjie <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
python-dotenv = "^0.17.0"
replit = "^3.0.0"
sendgrid = "^6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
